--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body{
 }
 
 .introduction {
+    line-height: 32px;
     transition: ease-in-out 0.2s;
     background-color: #fdf8f8;
     border: #303841 3px solid;
